--- a/css/main.sass
+++ b/css/main.sass
@@ -21,6 +21,8 @@ div.wheater
       size: cover
     margin-bottom: 60px
 
+  span.underline
+    text-decoration: underline
 
   span
     font-weight: 600
