--- a/css/main.sass
+++ b/css/main.sass
@@ -21,12 +21,16 @@ div.wheater
       size: cover
     margin-bottom: 60px
 
-  span.underline
-    text-decoration: underline
+
 
   span
     font-weight: 600
     color: $dark
+
+  span.underline
+    text-decoration: underline
+    font-weight: normal
+    color: $grey
 
 .copy_right
   color: $grey
