--- a/css/main.css
+++ b/css/main.css
@@ -16,11 +16,13 @@ div.wheater {
     background-image: url(../images/sun_cloud.png);
     background-size: cover;
     margin-bottom: 60px; }
-  div.wheater span.underline {
-    text-decoration: underline; }
   div.wheater span {
     font-weight: 600;
     color: #8B8B8B; }
+  div.wheater span.underline {
+    text-decoration: underline;
+    font-weight: normal;
+    color: #D4D4D4; }
 
 .copy_right {
   color: #D4D4D4;
